fix: Limit gap between booking sections

--- a/assets/sass/booking.scss
+++ b/assets/sass/booking.scss
@@ -94,10 +94,8 @@
   margin-bottom: 1.5rem;
 }
 
-.o-booking__sections {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+.o-booking__sections > .o-booking__section:not(:first-child) {
+  margin-top: 1rem;
 }
 
 .o-booking__content {
